--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
+    "concurrently": "^3.1.0",
     "json-loader": "^0.5.4",
+    "serverless": "^1.0.0-rc.2",
     "serverless-webpack": "^1.0.0-rc.2",
     "webpack": "^1.13.2"
   },
   "scripts": {
-
+    "deploy": "sls deploy",
+    "destroy": "sls remove",
+    "run:remote": "sls invoke -l -f",
+    "run:local": "sls webpack invoke -l -f",
+    "watch": "sls webpack watch -l -f",
+    "serve": "sls webpack serve -p 3000"
   },
   "repository": {
     "type": "git",
