--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: gotyou
+service: serverless
 
 provider:
   name: aws
@@ -47,6 +47,10 @@ provider:
 functions:
   hello:
     handler: functions/hello.handler
+    events:
+      - http:
+          method: get
+          path: hello
 
 #    you can add any of the following events
 #    events:
