--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-babel-webpack-starter",
   "version": "0.0.2",
   "description": "ES7 + Babel + Webpack + Serverless Framework",
-  "dependencies": {git },
+  "dependencies": {},
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
