fix(webpack): fix webpack bundle dependency problem

--- a/serverless.vars.yml
+++ b/serverless.vars.yml
@@ -24,3 +24,4 @@ currentVars:
   cors:
     origins: ${self:custom.currentVars.CorsOrigins}
 webpack: ${self:custom.currentVars.webpackConfigFile}
+webpackIncludeModules: true
