--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "serverless-babel-webpack-starter",
   "version": "0.0.2",
   "description": "ES7 + Babel + Webpack + Serverless Framework",
-  "dependencies": {},
+  "dependencies": {
+    "babel-polyfill": "^6.16.0"
+  },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
     "concurrently": "^3.1.0",
     "json-loader": "^0.5.4",
     "serverless": "^1.0.0-rc.2",
     "serverless-webpack": "^1.0.0-rc.2",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-node-externals": "^1.4.3"
   },
   "scripts": {
     "deploy": "sls deploy",
